# LightKV

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: lightkv.example.conf
docs/: architecture.md  debug_log.md  development_log.md  interview_qa.md  protocol.md  resume.md  stage_checklist.md
include/lightkv/bench/: BenchOptions.h
include/lightkv/client/: ClusterClient.h  LightKVClient.h
include/lightkv/cluster/: ConsistentHash.h  NodeInfo.h
include/lightkv/common/: Config.h  Logger.h  Metrics.h  Status.h
include/lightkv/net/: Buffer.h  TcpConnection.h  TcpServer.h
include/lightkv/persistence/: Wal.h  WalReplayer.h
include/lightkv/protocol/: Command.h  CommandExecutor.h  Parser.h  Response.h
include/lightkv/replication/: MasterReplication.h  ReplicationRole.h  ReplicationState.h  SlaveReplication.h
include/lightkv/storage/: Entry.h  KVStore.h  LRUCache.h
scripts/: bench.bat  bench.sh  build.bat  build.sh  linux_verify.sh  run_server.bat  run_server.sh  test.bat
src/: main.cpp
src/bench/: BenchOptions.cpp
src/client/: ClusterClient.cpp  LightKVClient.cpp
src/cluster/: ConsistentHash.cpp
src/common/: Config.cpp  Logger.cpp  Metrics.cpp  Status.cpp
src/net/: Buffer.cpp  TcpConnection.cpp  TcpServer.cpp
src/persistence/: Wal.cpp  WalReplayer.cpp
src/protocol/: CommandExecutor.cpp  Parser.cpp  Response.cpp
src/replication/: MasterReplication.cpp  ReplicationState.cpp  SlaveReplication.cpp
src/storage/: KVStore.cpp  LRUCache.cpp
tests/: test_bench_config.cpp  test_buffer.cpp  test_cluster_client_routing.cpp  test_command_executor.cpp  test_config.cpp  test_consistent_hash.cpp  test_kvstore.cpp  test_logger.cpp  test_lru.cpp  test_metrics.cpp  test_parser.cpp  test_replication_state.cpp  test_ttl.cpp  test_ttl_regression.cpp  test_wal.cpp  test_wal_offset.cpp  test_wal_replayer.cpp
tools/: lightkv_bench.cpp  lightkv_cli.cpp  lightkv_cluster_cli.cpp
